# pymol-rs

./: .gitignore  BACKLOG.md  Cargo.toml  LICENSE  Makefile  NUCLEIC_CARTOON_PROMPT.md  PYTHON_INTEGRATION_PLAN.md  README.md  docs.html  index.html  test.py
bench/: Cargo.toml  README.md
bench/benches/: assembly.rs  raytrace_procedure.rs  render_loop.rs
bench/benches/common/: mod.rs
crates/patinae-algos/: Cargo.toml
crates/patinae-algos/src/: lib.rs
crates/patinae-cmd/: Cargo.toml
crates/patinae-cmd/src/: args.rs  command.rs  dynamic.rs  error.rs  executor.rs  helpers.rs  history.rs  lib.rs  parser.rs  script.rs  setting_access.rs
crates/patinae-framework/: Cargo.toml
crates/patinae-framework/src/: atom_stream.rs  completion.rs  component.rs  kernel.rs  layout.rs  lib.rs  message.rs  plugin_ui.rs  tasks.rs  topics.rs
crates/patinae-mm/: Cargo.toml
crates/patinae-mm/src/: build.rs  cap.rs  energy.rs  forcefields.rs  gradient.rs  gromacs.rs  hbond.rs  lib.rs  minimize.rs  mutate.rs  parametrize.rs  protonation.rs  residue_geometry.rs  rotamers.rs  score.rs  sidechain.rs  topology.rs
crates/patinae-mol/: Cargo.toml
crates/patinae-mol/src/: atom.rs  bond_utils.rs  bonding.rs  ccd.rs  chains.rs  coordset.rs  dirty.rs  dss.rs  element.rs  flags.rs  iterator.rs  lib.rs  molecule.rs  residue.rs  secondary.rs  spatial.rs  spectrum.rs  subchain.rs
crates/patinae-plugin/: Cargo.toml
crates/patinae-plugin-host/: Cargo.toml
crates/patinae-plugin-host/src/: host.rs  lib.rs  loader.rs  panel_events.rs  panels.rs  panic.rs  paths.rs  plugin.rs  runtime.rs  tests.rs
crates/patinae-plugin/src/: ffi.rs  lib.rs  macros.rs  registrar.rs  wire.rs
crates/patinae-render/: Cargo.toml
crates/patinae-render/src/: byte_units.rs  capture.rs  context.rs  frame.rs  geometry_export.rs  lib.rs  lut_buffer.rs  map_contour.rs  memory.rs  memory_policy.rs  memory_recovery.rs  render_artifacts.rs  render_input.rs  representation_budget.rs  shader_source.rs  stats.rs  stats_history.rs  uniforms.rs  viewport_image.rs
crates/patinae-scene/: Cargo.toml
crates/patinae-scene/src/: camera.rs  error.rs  gpu_runtime.rs  highlight_state.rs  input.rs  keybindings.rs  lib.rs  movie.rs  pick.rs  quat.rs  render_target.rs  scene.rs  selection.rs  serde_helpers.rs  session.rs  session_adapter.rs  view.rs  viewer_trait.rs
crates/patinae-scene/tests/: bridge_colors.rs  bridge_markers.rs
crates/patinae-select/: Cargo.toml
crates/patinae-select/src/: ast.rs  context.rs  error.rs  eval.rs  keywords.rs  lexer.rs  lib.rs  parser.rs  pattern.rs  result.rs
crates/patinae-session/: Cargo.toml
crates/patinae-session/src/: lib.rs  prs.rs
crates/patinae-settings/: Cargo.toml
crates/patinae-settings/src/: definitions.rs  dynamic.rs  enums.rs  legacy.rs  lib.rs  macros.rs  overrides.rs  paths.rs  recent_files.rs  registry.rs  setting.rs  shading_mode.rs  side_effects.rs  store.rs
crates/pymol-algos/: Cargo.toml
crates/pymol-algos/src/: ce.rs  kabsch.rs  lib.rs  sequence_align.rs  superpose.rs
crates/pymol-cmd/: Cargo.toml
crates/pymol-cmd/examples/: interactive.rs
crates/pymol-cmd/src/: args.rs  command.rs  dynamic.rs  error.rs  executor.rs  helpers.rs  history.rs  lib.rs  logger.rs  parser.rs  script.rs
crates/pymol-framework/: Cargo.toml
crates/pymol-framework/src/: completion.rs  component.rs  layout.rs  lib.rs  message.rs  topics.rs
crates/pymol-gui/: Cargo.toml  build.rs
crates/pymol-gui/src/: app.rs  async_tasks.rs  bundle.rs  component_store.rs  fetch.rs  layout.rs  lib.rs  main.rs  menu.rs  message.rs  plugin_manager.rs  state.rs  view.rs  viewer_adapter.rs
crates/pymol-io/: Cargo.toml
crates/pymol-io/src/: ccp4.rs  detect.rs  error.rs  fetch.rs  lib.rs  traits.rs  units.rs
crates/pymol-mol/: Cargo.toml
crates/pymol-mol/src/: atom.rs  bond.rs  bonding.rs  chains.rs  coordset.rs  dss.rs  element.rs  error.rs  flags.rs  index.rs  iterator.rs  lib.rs  molecule.rs  residue.rs  secondary.rs  spatial.rs
crates/pymol-plugin/: Cargo.toml
crates/pymol-plugin/src/: ffi.rs  lib.rs  macros.rs  registrar.rs
crates/pymol-python/: Cargo.toml  pyproject.toml
crates/pymol-python/src/: cmd.rs  connection.rs  convert.rs  error.rs  lib.rs  scripting.rs  viewer.rs
crates/pymol-python/tests/: test_basic.py
crates/pymol-raytracer/: Cargo.toml
crates/pymol-raytracer/src/: collect.rs  context.rs  edge_pipeline.rs  error.rs  lib.rs  pipeline.rs  primitive.rs  render.rs
crates/pymol-render/: Cargo.toml
crates/pymol-render/src/: buffer.rs  color_resolver.rs  context.rs  error.rs  lib.rs  multishadow.rs  picking.rs  pipeline.rs  silhouette.rs  uniforms.rs  vertex.rs
crates/pymol-scene/: Cargo.toml
crates/pymol-scene/examples/: viewer.rs
crates/pymol-scene/src/: camera.rs  capture.rs  error.rs  input.rs  keybindings.rs  lib.rs  movie.rs  pick.rs  pick_bvh.rs  quat.rs  raytrace.rs  render_loop.rs  scene.rs  selection.rs  session.rs  session_adapter.rs  uniform.rs  view.rs  viewer.rs  viewer_trait.rs  window.rs
patinae/: Cargo.toml
patinae/src/: app.rs  clipboard.rs  cv_display_link.rs  display_recovery.rs  fetch.rs  macos.rs  main.rs  native_file_actions.rs  native_menu.rs  recent_files.rs  recent_thumbnails.rs  startup_alert.rs
patinae/src/bridges/: input.rs  layout.rs  mod.rs  movie.rs  objects.rs  platform.rs  repl.rs  sequence.rs  theme.rs  viewport.rs
patinae/src/components/: viewport.rs
patinae/ui/: app.slint  layout.slint  theme.slint  tokens.slint
patinae/ui/components/: fetch-dialog.slint  icons.slint  sidebar.slint
patinae/ui/states/: layout-state.slint  menu-state.slint  movie-state.slint  notification-state.slint  (+6 more)
python/: Cargo.toml  README.md  pyproject.toml
python/patinae/: __init__.py  _cli.py  _cmd.py
python/pymol_rs/: __init__.py  _cli.py  _cmd.py
python/src/: backend.rs  convert.rs  error.rs  iterate.rs  lib.rs
web/: Cargo.toml  LICENSE  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/examples/: index.html  minimal.html  perf.html
web/src/: bridge.rs  event.rs  gpu.rs  lib.rs  picking.rs  render_loop.rs
(+657 files in other folders)
