[workspace]
resolver = "2"
members = [
    "crates/pymol-settings",
    "crates/pymol-color",
    "crates/pymol-mol",
    "crates/pymol-select",
    "crates/pymol-io",
    "crates/pymol-render",
    "crates/pymol-raytracer",
    "crates/pymol-scene",
    "crates/pymol-cmd",
    "crates/pymol-gui",
]
# pymol-python requires maturin to build (use: cd crates/pymol-python && maturin build)
exclude = ["crates/pymol-python"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pavel Yakovlev"]
license = "BSD-3-Clause"
repository = "https://github.com/zmactep/pymol-rs"

[workspace.dependencies]
# Internal crates
pymol-settings = { path = "crates/pymol-settings" }
pymol-color = { path = "crates/pymol-color" }
pymol-mol = { path = "crates/pymol-mol" }
pymol-select = { path = "crates/pymol-select" }
pymol-io = { path = "crates/pymol-io" }
pymol-render = { path = "crates/pymol-render" }
pymol-raytracer = { path = "crates/pymol-raytracer" }
pymol-scene = { path = "crates/pymol-scene" }
pymol-cmd = { path = "crates/pymol-cmd" }
pymol-gui = { path = "crates/pymol-gui" }

# External dependencies
bitflags = "2"
lin_alg = { version = "1.1", features = ["computer_graphics"] }
wgpu = "27"
winit = "0.30.12"
nom = "7"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1", features = ["derive"] }
parking_lot = "0.12"
ahash = "0.8"
smallvec = "1"
memmap2 = "0.9"
flate2 = "1"
rayon = "1"
bitvec = "1"
phf = { version = "0.11", features = ["macros"] }
rustyline = "17"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
shellexpand = "3"

# egui integration
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"