[workspace]
resolver = "2"
members = [
    "crates/pymol-settings",
    "crates/pymol-color",
    "crates/pymol-mol",
    "crates/pymol-select",
    "crates/pymol-io",
    "crates/pymol-render",
    "crates/pymol-raytracer",
    "crates/pymol-scene",
    "crates/pymol-cmd",
    "crates/pymol-framework",
    "crates/pymol-plugin",
    "crates/pymol-gui",
    "crates/pymol-algos",
    "crates/pymol-session",
    "plugins/hello",
    "plugins/ipc",
    "plugins/python",
    "plugins/toolbar",
]
default-members = [
    "crates/pymol-settings",
    "crates/pymol-color",
    "crates/pymol-mol",
    "crates/pymol-select",
    "crates/pymol-io",
    "crates/pymol-render",
    "crates/pymol-raytracer",
    "crates/pymol-scene",
    "crates/pymol-cmd",
    "crates/pymol-framework",
    "crates/pymol-plugin",
    "crates/pymol-gui",
    "crates/pymol-algos",
    "crates/pymol-session",
]
# python API requires maturin to build (use: cd python && maturin build)
# web viewer is built separately with wasm-pack (use: cd web && npm run build)
exclude = ["python", "web"]

[workspace.package]
version = "0.2.3"
edition = "2021"
authors = ["Pavel Yakovlev"]
license = "BSD-3-Clause"
repository = "https://github.com/zmactep/pymol-rs"
homepage = "https://github.com/zmactep/pymol-rs"
documentation = "https://github.com/zmactep/pymol-rs"

[workspace.dependencies]
# Internal crates
pymol-settings = { version = "0.2.3", path = "crates/pymol-settings" }
pymol-color = { version = "0.2.3", path = "crates/pymol-color" }
pymol-mol = { version = "0.2.3", path = "crates/pymol-mol" }
pymol-select = { version = "0.2.3", path = "crates/pymol-select" }
pymol-io = { version = "0.2.3", path = "crates/pymol-io" }
pymol-render = { version = "0.2.3", path = "crates/pymol-render", default-features = false }
pymol-raytracer = { version = "0.2.3", path = "crates/pymol-raytracer" }
pymol-scene = { version = "0.2.3", path = "crates/pymol-scene", default-features = false }
pymol-cmd = { version = "0.2.3", path = "crates/pymol-cmd", default-features = false }
pymol-gui = { version = "0.2.3", path = "crates/pymol-gui" }
pymol-algos = { version = "0.2.3", path = "crates/pymol-algos" }
pymol-session = { version = "0.2.3", path = "crates/pymol-session" }
pymol-framework = { version = "0.2.3", path = "crates/pymol-framework" }
pymol-plugin = { version = "0.2.3", path = "crates/pymol-plugin" }

# External dependencies
bitflags = { version = "2", features = ["serde"] }
lin_alg = { version = "1.1", features = ["computer_graphics"] }
wgpu = "27"
winit = "0.30.12"
nom = "7"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1", features = ["derive"] }
parking_lot = "0.12"
ahash = { version = "0.8", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
memmap2 = "0.9"
flate2 = "1"
rayon = "1"
bitvec = "1"
phf = { version = "0.11", features = ["macros"] }
rustyline = "17"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
shellexpand = "3"
libloading = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
rmp-serde = "1"

# egui integration
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
