[package]
name = "patinae-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
patinae-algos = { workspace = true }
patinae-io = { workspace = true }
patinae-mol = { workspace = true }
patinae-select = { workspace = true }
patinae-color = { workspace = true }
patinae-scene = { workspace = true, default-features = false }
patinae-settings = { workspace = true }
patinae-render = { workspace = true, features = ["stats"] }
wgpu = { workspace = true }
pollster = "0.4"
flate2 = { workspace = true }
lin_alg = { workspace = true }
once_cell = "1"

[[bench]]
name = "assembly"
harness = false

[[bench]]
name = "render_loop"
harness = false

[lints]
workspace = true
