[package]
name = "pymol-python"
version = "0.2.2"
edition = "2021"
authors = ["Pavel Yakovlev"]
license = "BSD-3-Clause"
repository = "https://github.com/zmactep/pymol-rs"
description = "Python bindings for pymol-rs using PyO3"

[lib]
name = "pymol_rs"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.27.2", features = ["extension-module"] }

# Internal crates (relative paths from this crate)
pymol-mol = { path = "../crates/pymol-mol" }
pymol-io = { path = "../crates/pymol-io", features = ["fetch"] }
pymol-select = { path = "../crates/pymol-select" }
pymol-color = { path = "../crates/pymol-color" }
pymol-settings = { path = "../crates/pymol-settings" }
pymol-scene = { path = "../crates/pymol-scene" }
pymol-cmd = { path = "../crates/pymol-cmd" }

# External dependencies
lin_alg = { version = "1.1", features = ["computer_graphics"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[features]
default = ["numpy"]
# Enable numpy array support for coordinate data
numpy = ["dep:numpy"]

[dependencies.numpy]
version = "0.27.1"
optional = true

[dev-dependencies]
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }

[lints.rust]
# Suppress warnings from PyO3's create_exception! macro
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"gil-refs\"))"] }
