[package]
name = "patinae-python"
version = "0.4.0"
edition = "2021"
authors = ["Pavel Yakovlev"]
license = "BSD-3-Clause"
repository = "https://github.com/zmactep/patinae"
description = "Python bindings for patinae using PyO3"

[lib]
name = "patinae"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings. The extension-module feature is enabled only
# for wheel builds so Rust test binaries can link against libpython.
pyo3 = { version = "0.27.2" }

# Internal crates (relative paths from this crate)
patinae-mol = { path = "../crates/patinae-mol" }
patinae-io = { path = "../crates/patinae-io", features = ["fetch"] }
patinae-select = { path = "../crates/patinae-select" }
patinae-color = { path = "../crates/patinae-color" }
patinae-settings = { path = "../crates/patinae-settings" }
patinae-scene = { path = "../crates/patinae-scene" }
patinae-cmd = { path = "../crates/patinae-cmd" }

# External dependencies
lin_alg = { version = "1.1", features = ["computer_graphics"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[features]
default = ["numpy"]
extension-module = ["pyo3/extension-module"]
# Enable numpy array support for coordinate data
numpy = ["dep:numpy"]

[dependencies.numpy]
version = "0.27.1"
optional = true

[dev-dependencies]
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }

[lints.rust]
# Suppress warnings from PyO3's create_exception! macro
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"gil-refs\"))"] }
