[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "patinae"
version = "0.4.4"
description = "Patinae: Modern molecular visualization in Rust with WebGPU rendering"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Pavel Yakovlev" }
]
keywords = ["patinae", "molecular", "visualization", "chemistry", "biology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
widget = ["anywidget>=0.9", "traitlets>=5.0"]
dev = ["pytest>=7.0", "numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/zmactep/patinae"
Repository = "https://github.com/zmactep/patinae"

[tool.maturin]
features = ["extension-module"]
python-source = "."
module-name = "patinae._patinae"
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "patinae/widget/_frontend.js", format = "sdist" },
    { path = "patinae/widget/static/**", format = ["sdist", "wheel"] },
]

[project.scripts]
patinae = "patinae._cli:main"
