[package]
name = "pymol-web"
version = "0.2.2"
edition = "2021"
authors = ["Pavel Yakovlev"]
license = "BSD-3-Clause"
repository = "https://github.com/pymol-rs/pymol-rs"
description = "PyMOL-RS web viewer — embeddable WebGPU molecular visualization component"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal crates (no windowing, no rayon for WASM)
pymol-mol = { path = "../crates/pymol-mol" }
pymol-io = { path = "../crates/pymol-io", default-features = false }
pymol-select = { path = "../crates/pymol-select" }
pymol-color = { path = "../crates/pymol-color" }
pymol-settings = { path = "../crates/pymol-settings" }
pymol-scene = { path = "../crates/pymol-scene", default-features = false }
pymol-cmd = { path = "../crates/pymol-cmd", default-features = false }
pymol-render = { path = "../crates/pymol-render", default-features = false }
pymol-framework = { path = "../crates/pymol-framework" }
lin_alg = { version = "1.1", features = ["computer_graphics"] }

# WASM + WebGPU
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "Performance",
    "console",
] }
js-sys = "0.3"
wgpu = "27"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

# getrandom needs wasm_js backend on wasm32 (used transitively via ahash)
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"        # optimize for size
lto = "fat"            # full link-time optimization
codegen-units = 1      # single codegen unit for better LTO
strip = true           # strip debug symbols
panic = "abort"        # smaller panic handler
