[workspace]

[package]
name = "patinae-web"
version = "0.4.1"
edition = "2021"
authors = ["Pavel Yakovlev"]
license = "BSD-3-Clause"
repository = "https://github.com/patinae/patinae"
description = "Patinae web viewer — embeddable WebGPU molecular visualization component"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal crates (no windowing, no rayon for WASM)
patinae-mol = { path = "../crates/patinae-mol" }
patinae-io = { path = "../crates/patinae-io", default-features = false }
patinae-select = { path = "../crates/patinae-select" }
patinae-color = { path = "../crates/patinae-color" }
patinae-settings = { path = "../crates/patinae-settings" }
patinae-scene = { path = "../crates/patinae-scene", default-features = false, features = ["render-bridge"] }
patinae-cmd = { path = "../crates/patinae-cmd", default-features = false }
patinae-algos = { path = "../crates/patinae-algos" }
patinae-render = { path = "../crates/patinae-render" }
lin_alg = { version = "1.1", features = ["computer_graphics"] }

# WASM + WebGPU
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "Performance",
    "console",
] }
js-sys = "0.3"
wgpu = "28"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

# getrandom needs wasm_js backend on wasm32 (used transitively via ahash)
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"        # optimize for size
lto = "fat"            # full link-time optimization
codegen-units = 1      # single codegen unit for better LTO
strip = true           # strip debug symbols
panic = "abort"        # smaller panic handler
