[package]
name = "patinae-select"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Patinae selection language parser and evaluator"

[dependencies]
patinae-mol = { workspace = true }
lin_alg = { workspace = true }
nom = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
bitvec = { workspace = true }
phf = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
