[package]
name = "patinae-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "PSE session file reader for patinae"

[dependencies]
ahash.workspace = true
flate2.workspace = true
thiserror.workspace = true
patinae-scene = { workspace = true, default-features = false }
patinae-mol.workspace = true
patinae-settings.workspace = true
patinae-color.workspace = true
lin_alg.workspace = true
log.workspace = true
serde = { workspace = true }
rmp-serde.workspace = true

[lints]
workspace = true
