[package]
name = "pymol-cmd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "PyMOL command parsing and execution system"

[features]
default = ["fetch-async", "fetch", "native-io"]
fetch = ["pymol-io/fetch"]
fetch-async = ["pymol-io/fetch-async"]
native-io = ["dep:shellexpand", "dep:image"]

[dependencies]
# Internal crates
pymol-scene = { workspace = true, default-features = false }
pymol-select = { workspace = true }
pymol-io = { workspace = true }
pymol-settings = { workspace = true }
pymol-mol = { workspace = true }
pymol-color = { workspace = true }
pymol-algos = { workspace = true }
pymol-session = { workspace = true }

# External dependencies
nom = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
log = { workspace = true }
lin_alg = { workspace = true }
shellexpand = { workspace = true, optional = true }
image = { workspace = true, optional = true }
