[package]
name = "pymol-framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared application infrastructure for PyMOL-RS (messaging, components, layout)"

[features]
default = []
egui = ["dep:egui"]

[dependencies]
pymol-cmd = { workspace = true, default-features = false }
pymol-mol = { workspace = true }
pymol-scene = { workspace = true }
pymol-color = { workspace = true }
pymol-settings = { workspace = true }
# Note: pymol-settings and dirs are needed for the completion module
egui = { workspace = true, optional = true }
serde = { workspace = true }
rmp-serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "5"
log = { workspace = true }
