[package]
name = "pymol-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "PyMOL-RS GUI application with egui interface"

[[bin]]
name = "pymol-rs"
path = "src/main.rs"

[dependencies]
# Internal crates
pymol-framework = { workspace = true, features = ["egui"] }
pymol-plugin = { workspace = true }
pymol-scene = { workspace = true, features = ["windowing", "png-export", "parallel"] }
pymol-cmd = { workspace = true, features = ["fetch", "fetch-async", "native-io"] }
pymol-mol = { workspace = true }
pymol-io = { workspace = true, features = ["fetch-async"] }
pymol-select = { workspace = true }
pymol-settings = { workspace = true }
pymol-color = { workspace = true }
pymol-render = { workspace = true, features = ["parallel"] }
pymol-raytracer = { workspace = true }

# Plugin loading
libloading = { workspace = true }

# Image handling
image = { workspace = true }

# egui integration
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }

# Graphics
winit = { workspace = true }
wgpu = { workspace = true }
lin_alg = { workspace = true }

# Utilities
log = { workspace = true }
env_logger = { workspace = true }
pollster = { workspace = true }
dirs = "5"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
